website/versioned_docs/version-1.x/hooks/useQueries.mdx
---
sidebar_label: useQueries()
---

# useQueries(...)

The Hook enables you to concurrently execute multiple asynchronous data fetching operations.
For more detailed information, explore the TanStack
[_useQueries(...) 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useQueries) documentation.

```ts
const queries = qraft.<service>.<operation>.useQueries(
  options,
  queryClient
)
```

### Arguments

1.  `options: UseQueriesOptions`
    - **Required**, represents the options for queries, see [_useQueries(...) 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useQueries) documentation
    - `options.queries: QueryOptions[]`
      - **Required** array of _Queries_ to be executed
      - `parameters: { path, query, header }` will be used for the request
      - `queryKey: QueryKey` will be used for the request instead of the `parameters`
        - `queryKey` and `parameters` are mutually exclusive
    - `options.combine?: (result: UseQueriesResults) => TCombinedResult`
      - **Optional**, a function to select the data from the mutation
2.  `queryClient?: QueryClient`
    - **Optional** [_QueryClient 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient) to be used
    - _If not provided_
      - `QraftContext.queryClient` will be used if available
      - [_useQueryClient() 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useQueryClient)
        result will be used as a fallback

### Returns
Array with all the `Queries`. The order returned is the same as the input order.

### Example

```tsx
import { createAPIClient } from './api'; // generated by OpenAPI Qraft

const qraft = createAPIClient();

/**
 * Initiates two concurrent GET requests:
 * ###
 * GET /entities/3e3e-3e3e-3e3e
 * x-monite-version: 2023-09-01
 * ###
 * GET /entities/5c5c-5c5c-5c5c
 * x-monite-version: 2023-09-01
 **/
const entityQueries = qraft.entities.getEntities.useQueries({
  queries: [
    {
      parameters: {
        header: {
          'x-monite-version': '2023-09-01',
        },
        path: {
          entity_id: '3e3e-3e3e-3e3e',
        },
      },
    },
    {
      parameters: {
        header: {
          'x-monite-version': '2023-09-01',
        },
        path: {
          entity_id: '5c5c-5c5c-5c5c',
        },
      },
    },
  ],
  combine: (results) => results.map((result) => result.data),
});
```
